--- a/styles/nprogress.css
+++ b/styles/nprogress.css
@@ -4,7 +4,7 @@
 }
 
 #nprogress .bar {
-  background: #1A94C5;
+  background: #343A40;
   position: fixed;
   z-index: 1031;
   top: 0;
@@ -21,7 +21,7 @@
   right: 0px;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px #1A94C5, 0 0 5px #1A94C5;
+  box-shadow: 0 0 10px #343A40, 0 0 5px #343A40;
   opacity: 1.0;
 
   -webkit-transform: rotate(3deg) translate(0px, -4px);
@@ -44,8 +44,8 @@
   box-sizing: border-box;
 
   border: solid 2px transparent;
-  border-top-color: #1A94C5;
-  border-left-color: #1A94C5;
+  border-top-color: #343A40;
+  border-left-color: #343A40;
   border-radius: 50%;
 
   -webkit-animation: nprogress-spinner 400ms linear infinite;
